# quantlab-project

./: .env.example  .gitignore  README.md  WSL2_SETUP.sh  migrate_v2.py  pyproject.toml  verify_env.py
docs/: STRATEGY.md
scripts/: analyse_wyckoff_filter.py  check_daily_runs.py  daily_scan.sh  evening_scan.sh  fetch_bars.py  fetch_edgar_universe.py  fetch_ibkr_news.py  fetch_ibkr_option_chain.py  fetch_ibkr_option_quotes.py  fetch_macro_context.py  finalize_sessions.py  generate_report.py  monitor_options.py  monitor_options.sh  morning.sh  purge_watchlist.py  reconcile_positions.py  rescore_options_session.py  rescore_universe_analysis.py  run_backtest.py  run_backtest_with_news.py  run_http_provider.py  run_mock_provider.py  run_signal.py  run_universe_backtest.py  scan_universe.py  setup_wsl2_autostart.ps1  smoke_test.py  sync_flat_files.py  tag_ibkr_news.py  test_ibkr_connection.py  test_ibkr_history.py  track_forward_returns.py  update_breadth.py  update_crontab.sh  update_macro.py  watchlist_status.py  wsl2_keepalive.sh
scripts/lib/: run_lock.sh
src/quantlab/: __init__.py  backtest.py  config.py  growth_filter.py  io.py  logging_utils.py  main.py  market_calendar.py  options_finalize.py  paths.py  types.py  universe.py  watchlist.py
src/quantlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quantlab/execution/: __init__.py
src/quantlab/news/: __init__.py  earnings_parser.py
src/quantlab/providers/: __init__.py  base.py  cboe.py  edgar.py  factory.py  factset.py  flat_files.py  fred.py  http.py  ibkr.py  ibkr_fundamentals.py  massive_options.py  mock.py  polygon.py  providers.py
src/quantlab/research/: __init__.py  ic_monitor.py
src/quantlab/risk/: __init__.py  regime_policy.py
src/quantlab/services/: __init__.py  market_data_service.py
src/quantlab/signals/: __init__.py  breadth.py  earnings.py  options_flow.py  options_relative.py  relative_strength.py  unusual_options.py  volume_profile.py  wyckoff.py
src/quantlab/storage/: __init__.py
src/quantlab/utils/: __init__.py  market_calendar.py
tests/: test_breakout_volume.py  test_db_lock_retry.py  test_edgar_durations.py  test_flag_freshness.py  test_flat_files.py  test_free_data_providers.py  test_growth_filter.py  test_http_provider.py  test_ibkr_provider.py  test_io.py  test_massive_options.py  test_mock_provider.py  test_options_finalize.py  test_options_pipeline.py  test_options_relative.py  test_paths.py  test_position_price_invariant.py  test_provider_factory.py  test_quantlab.py  test_run_lock.py  test_universe_gate.py  test_unusual_options.py
tests/fixtures/: aeis_companyfacts.json  unfi_companyfacts.json
