[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Quant research workspace for data pipelines, notebooks, and backtests."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "hadda" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]